Fix layout shift from long random text strings

--- a/src/assets/sass/_init.scss
+++ b/src/assets/sass/_init.scss
@@ -1,7 +1,8 @@
 .init-blk {
     background-color: var(--color-secondary);
     max-width: 100%;
-    padding: 80px 0px;
+    height: 180px;
+    display: flex;
 
     .title-blk {
         width: 80%;
